--- a/generator-rs/package.json
+++ b/generator-rs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-rs",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.0",
+  "description": "Generator of React components and store entities",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
